--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -15,9 +15,9 @@ dx12 = ["gfx-backend-dx12"]
 vulkan = ["gfx-backend-vulkan"]
 unstable = []
 
-[[bin]]
-name = "colour-uniform"
-path = "colour-uniform/main.rs"
+#[[bin]]
+#name = "colour-uniform"
+#path = "colour-uniform/main.rs"
 
 [[bin]]
 name = "quad"
@@ -35,7 +35,7 @@ gfx-hal = { path = "../src/hal", version = "0.2" }
 gfx-backend-empty = { path = "../src/backend/empty", version = "0.2" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-winit = "0.19"
+winit = "0.20.0-alpha1"
 glsl-to-spirv = "0.1.4"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies.gfx-backend-gl]
