--- a/src/backend/gl/Cargo.toml
+++ b/src/backend/gl/Cargo.toml
@@ -30,8 +30,8 @@ spirv_cross = { version = "0.14.0", features = ["glsl"] }
 lazy_static = "1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-glutin = { version = "0.21", optional = true }
-winit = { version = "0.19", optional = true }
+glutin = { version = "0.22.0-alpha", optional = true }
+winit = { version = "0.20.0-alpha", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.6"
